[gd_scene load_steps=80 format=3 uid="uid://benrwa8mmy06w"]

[ext_resource type="Script" path="res://character_body_2d.gd" id="1_ihqp5"]
[ext_resource type="Texture2D" uid="uid://qxg3073ygibf" path="res://Knight Anims/TurnAround.png" id="2_5pxnc"]
[ext_resource type="Texture2D" uid="uid://sfpskei2m7xr" path="res://Sprite Sheets/Run.png" id="2_lpoq2"]
[ext_resource type="Texture2D" uid="uid://7wwpsc17py7q" path="res://Sprite Sheets/Dash.png" id="2_pocnw"]
[ext_resource type="Texture2D" uid="uid://ctj0w256get3c" path="res://Sprite Sheets/Idle.png" id="2_wfsdl"]
[ext_resource type="Texture2D" uid="uid://ca2igfyudtjm7" path="res://Sprite Sheets/Slide.png" id="4_bwei0"]
[ext_resource type="Texture2D" uid="uid://y51tc145ec2j" path="res://Knight Anims/Jump.png" id="4_dwlw0"]
[ext_resource type="Texture2D" uid="uid://cg258fwkx103" path="res://Knight Anims/JumpFallInbetween.png" id="5_c8x8m"]
[ext_resource type="Texture2D" uid="uid://cu3xppncnnwya" path="res://Sprite Sheets/Slide End].png" id="6_troxi"]
[ext_resource type="Texture2D" uid="uid://l81o0c5lbjn7" path="res://Sprite Sheets/Slide Start.png" id="7_i6tpf"]
[ext_resource type="Texture2D" uid="uid://ngqjvyrchuug" path="res://Sprite Sheets/Swing 1.png" id="8_v60w5"]
[ext_resource type="Texture2D" uid="uid://cdexyla2ymosf" path="res://Sprite Sheets/Swing 2.png" id="9_0ae06"]
[ext_resource type="Texture2D" uid="uid://dwc4jmydy0lon" path="res://Knight Anims/WallClimbIdle.png" id="13_fvs2s"]
[ext_resource type="Texture2D" uid="uid://chmwc4a33cov" path="res://Knight Anims/WallHang.png" id="14_vtm84"]
[ext_resource type="Texture2D" uid="uid://jyy4eaqsgjdb" path="res://Knight Anims/WallSlide.png" id="15_7snrd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ww15w"]
atlas = ExtResource("2_5pxnc")
region = Rect2(0, 39, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggsc6"]
atlas = ExtResource("2_5pxnc")
region = Rect2(120, 39, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmilo"]
atlas = ExtResource("2_5pxnc")
region = Rect2(240, 39, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_aetyq"]
atlas = ExtResource("2_pocnw")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2avg"]
atlas = ExtResource("2_pocnw")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttupo"]
atlas = ExtResource("2_wfsdl")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ums2"]
atlas = ExtResource("2_wfsdl")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvg1d"]
atlas = ExtResource("2_wfsdl")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_j54o7"]
atlas = ExtResource("2_wfsdl")
region = Rect2(360, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ej06"]
atlas = ExtResource("2_wfsdl")
region = Rect2(480, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7ft8"]
atlas = ExtResource("2_wfsdl")
region = Rect2(600, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_y11g6"]
atlas = ExtResource("2_wfsdl")
region = Rect2(720, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h3t6"]
atlas = ExtResource("2_wfsdl")
region = Rect2(840, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0541p"]
atlas = ExtResource("2_wfsdl")
region = Rect2(960, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8snp"]
atlas = ExtResource("2_wfsdl")
region = Rect2(1080, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpohp"]
atlas = ExtResource("4_dwlw0")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcpmn"]
atlas = ExtResource("4_dwlw0")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7wpy"]
atlas = ExtResource("4_dwlw0")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_82dwj"]
atlas = ExtResource("5_c8x8m")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn6dx"]
atlas = ExtResource("5_c8x8m")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_x73ng"]
atlas = ExtResource("2_lpoq2")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_srq6i"]
atlas = ExtResource("2_lpoq2")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv0m8"]
atlas = ExtResource("2_lpoq2")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xvuo"]
atlas = ExtResource("2_lpoq2")
region = Rect2(360, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6gmg"]
atlas = ExtResource("2_lpoq2")
region = Rect2(480, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjq2d"]
atlas = ExtResource("2_lpoq2")
region = Rect2(600, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7cb1"]
atlas = ExtResource("2_lpoq2")
region = Rect2(720, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8d21"]
atlas = ExtResource("2_lpoq2")
region = Rect2(840, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrfe"]
atlas = ExtResource("2_lpoq2")
region = Rect2(960, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtnja"]
atlas = ExtResource("2_lpoq2")
region = Rect2(1080, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_aehic"]
atlas = ExtResource("4_bwei0")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxghh"]
atlas = ExtResource("4_bwei0")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1xrx"]
atlas = ExtResource("6_troxi")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_qel61"]
atlas = ExtResource("7_i6tpf")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwfdk"]
atlas = ExtResource("7_i6tpf")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3icg"]
atlas = ExtResource("7_i6tpf")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgsst"]
atlas = ExtResource("7_i6tpf")
region = Rect2(360, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcvkh"]
atlas = ExtResource("8_v60w5")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wux7u"]
atlas = ExtResource("8_v60w5")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ej3"]
atlas = ExtResource("8_v60w5")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_imls2"]
atlas = ExtResource("8_v60w5")
region = Rect2(360, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsp2s"]
atlas = ExtResource("9_0ae06")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxbjk"]
atlas = ExtResource("9_0ae06")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffnt1"]
atlas = ExtResource("9_0ae06")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr5se"]
atlas = ExtResource("9_0ae06")
region = Rect2(360, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_axpt2"]
atlas = ExtResource("9_0ae06")
region = Rect2(480, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y83ct"]
atlas = ExtResource("9_0ae06")
region = Rect2(0, 120, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_02hs6"]
atlas = ExtResource("2_5pxnc")
region = Rect2(240, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp426"]
atlas = ExtResource("2_5pxnc")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ql3"]
atlas = ExtResource("2_5pxnc")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hikc0"]
atlas = ExtResource("13_fvs2s")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1qit"]
atlas = ExtResource("13_fvs2s")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gol0r"]
atlas = ExtResource("13_fvs2s")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sspun"]
atlas = ExtResource("13_fvs2s")
region = Rect2(360, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxueh"]
atlas = ExtResource("13_fvs2s")
region = Rect2(480, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkomw"]
atlas = ExtResource("13_fvs2s")
region = Rect2(600, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_emrtb"]
atlas = ExtResource("13_fvs2s")
region = Rect2(720, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hkqn"]
atlas = ExtResource("14_vtm84")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ompq"]
atlas = ExtResource("15_7snrd")
region = Rect2(0, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl803"]
atlas = ExtResource("15_7snrd")
region = Rect2(120, 39, 120, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hthk6"]
atlas = ExtResource("15_7snrd")
region = Rect2(240, 39, 120, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_up5i5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww15w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggsc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmilo")
}],
"loop": false,
"name": &"Around Turn",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aetyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2avg")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttupo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ums2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvg1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j54o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ej06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7ft8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y11g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h3t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0541p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8snp")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpohp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcpmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7wpy")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82dwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn6dx")
}],
"loop": true,
"name": &"Jump in between",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x73ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srq6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv0m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xvuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6gmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjq2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7cb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8d21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtnja")
}],
"loop": true,
"name": &"Run",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aehic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxghh")
}],
"loop": true,
"name": &"Slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1xrx")
}],
"loop": true,
"name": &"Slide End",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qel61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwfdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3icg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgsst")
}],
"loop": true,
"name": &"Slide Start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcvkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wux7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ej3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imls2")
}],
"loop": true,
"name": &"Swing 1",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsp2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxbjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axpt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y83ct")
}],
"loop": true,
"name": &"Swing 2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02hs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp426")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ql3")
}],
"loop": false,
"name": &"Turn Around",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hikc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1qit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gol0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sspun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxueh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkomw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emrtb")
}],
"loop": true,
"name": &"Wall Climb",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hkqn")
}],
"loop": true,
"name": &"Wall Hang",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ompq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl803")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hthk6")
}],
"loop": true,
"name": &"Wall Slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e7tk"]
size = Vector2(22.25, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_26s36"]
radius = 35.6931

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("timer", "timer2", "timer3", "timer4", "timer5", "SlidingAnimationStart", "SlidingAnimationMiddle", "SlidingAnimationEnd", "TextEdit1", "AnimatedSprite")]
position = Vector2(-1, 0)
collision_layer = 3
script = ExtResource("1_ihqp5")
timer = NodePath("Timer")
timer2 = NodePath("Timer2")
timer3 = NodePath("Timer3")
timer4 = NodePath("Timer4")
timer5 = NodePath("Timer5")
SlidingAnimationStart = NodePath("SlidingAnimationStart")
SlidingAnimationMiddle = NodePath("SlidingAnimationMiddle")
SlidingAnimationEnd = NodePath("SlidingAnimationEnd")
TextEdit1 = NodePath("TextEdit")
AnimatedSprite = NodePath("AnimatedSprite2D")
metadata/Health = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-18, 45)
scale = Vector2(0.66, 0.66)
sprite_frames = SubResource("SpriteFrames_up5i5")
animation = &"Turn Around"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-19.875, 46.5)
shape = SubResource("RectangleShape2D_6e7tk")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Timer3" type="Timer" parent="."]
one_shot = true

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = -221.0
offset_top = -145.0
offset_right = -130.0
offset_bottom = -89.0
placeholder_text = "Health"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-20, 46)
shape = SubResource("CircleShape2D_26s36")

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer5" type="Timer" parent="."]
one_shot = true

[node name="SlidingAnimationStart" type="Timer" parent="."]
one_shot = true

[node name="SlidingAnimationMiddle" type="Timer" parent="."]
one_shot = true

[node name="SlidingAnimationEnd" type="Timer" parent="."]
one_shot = true

[connection signal="text_set" from="TextEdit" to="." method="_on_text_edit_text_set"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_timer_5_timeout"]
[connection signal="timeout" from="SlidingAnimationStart" to="." method="_on_sliding_animation_start_timeout"]
[connection signal="timeout" from="SlidingAnimationMiddle" to="." method="_on_sliding_animation_middle_timeout"]
[connection signal="timeout" from="SlidingAnimationEnd" to="." method="_on_sliding_animation_end_timeout"]
